# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: cli.py  file_parcer.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
